Fixed the Menu on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,27 +15,35 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.ios {
-	.menu-inner {
-		background: transparent !important; 
-	}
+.ion-menu {
+	background-color: transparent !important;
+}
+.menu-inner {
+	background: transparent !important; 
+}
+.ion-header {
+  	height: 120px;
+  	background-color: transparent !important;
+}
+.ion-list{
+	background-color: transparent !important;
+}
+.ion-nav {
+	background-color: transparent !important;
 }
 
-.md {
-	.menu-inner {
-		background: transparent !important; 
-	}
+
+.scroll-content {
+	overflow-y: auto !important;
 }
+
+/* POPSMOKE STYLINGS */
 
 .ps-menu {
-	background: rgba(255,255,255,0.5) !important;
-
-	.ion-list{
-		background-color: rgba(255,255,255,0) !important;
-	}
+	background: transparent !important;
 
 	.ps-menu-button {
-		background-color: rgba(255,255,255,0) !important;
+		background-color: transparent !important;
 		height: 100% !important;
 		padding: 0px !important;
 		width: 100% !important;
@@ -75,7 +83,7 @@
 	}
 	
 	.ps-menu-header {
-		background-color: rgba(255,255,255,0) !important;
+		background-color: transparent !important;
 		height: 80px !important;
 	}
 
@@ -91,21 +99,4 @@
 
 .spacer {
 	height: calc(100% - (7*64px) - 8px);
-}
-	
-.ion-header {
-  	height: 120px;
-  	background-color: rgba(255,255,255,0) !important;
-}
-
-.ion-menu {
-	background-color: rgba(255,255,255,0) !important;
-}
-
-.ion-nav {
-	background-color: rgba(255,255,255,0) !important;
-}
-
-.scroll-content {
-	overflow-y: auto !important;
 }
